# QtQmlControllerExample

./: .gitignore  CMakeLists.txt  README.md
qml/: main.qml
src/: Controller.cpp  Controller.h  main.cpp
